# esp-bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: esp-idf.yml
application/Wifi/: CMakeLists.txt  ev_handler.cpp  ev_handler.h  state.h  wifi.cpp  wifi.h
application/cam/: CMakeLists.txt  cam.cpp  cam.h  picture.cpp  picture.h
application/io_pin/: CMakeLists.txt  io_pin.cpp  io_pin.h
application/network/: CMakeLists.txt
application/network/clients/: client.h  clients.cpp  clients.h  error.h  state.h
application/network/server/: config.h  control.h  error.h  frame.h  handler.cpp  handler.h  login.h  server.cpp  server.h  socket_desc.h  sockets_handler.cpp  sockets_handler.h  state.h
application/network/wifi/: config.h  ev_handler.cpp  ev_handler.h  netiface.h  result.h  setting.h  state.h  wifi.cpp  wifi.h
application/robot/: CMakeLists.txt  control.h  robot.cpp  robot.h
application/tools/: CMakeLists.txt
application/tools/additional/: additional.cpp  additional.h  option.h  result.h
application/tools/buffer/: circular_buffer.h
application/tools/time/: gltime.h  timer.cpp  timer.h
application/tools/watchdog/: watchdog.h
core/: CMakeLists.txt  main.cpp  main.h  program.cpp  program.h  state.h
